# test-medianation

./: docker-compose.yml  pyproject.toml  requirements.txt
.github/workflows/: cd.yml  ci.yml
test-medianation/medianation/: manage.py
test-medianation/medianation/get_post_requests/: apps.py
test-medianation/medianation/medianation/: asgi.py  settings.py  urls.py  wsgi.py
